# cmake_practice

./: Readme
t3/: CMakeLists.txt
t3/lib/: CMakeLists.txt  hello.c  hello.h
t3/src/: CMakeLists.txt  main.c
t5/: CMakeLists.txt
t5/src/: CMakeLists.txt  main.c
